--- a/kontak.html
+++ b/kontak.html
@@ -44,7 +44,7 @@
         <div class="content">
             <h1 class="kontak">Kontak Saya</h1>
             <h1 class="text">Jika anda memerlukan bantuan bisa langsung menghubungi saya dengan menghubungi sosial media dibawah</h1>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://instagram.com/mohdbharya" target="_blank" rel="noopener noreferrer">
                 <img src="./gambar/ig.png" alt="Instagram">
             </a>
             <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
