--- a/Profil.html
+++ b/Profil.html
@@ -32,7 +32,7 @@
         }
 
         h1.text {
-            font-size: 16px; /* Ukuran font yang lebih umum */
+            font-size: 16px;
             font-weight: normal;
         }
 
